--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <h1>CLIQUE ABAIXO PRA FICAR ESTASIADO</h1>
         <p>
-            <a href="./videos/plankton gemendo.mp4">CLIQUE AQUI</a>
+            <a href="./plankton gemendo.mp4">CLIQUE AQUI</a>
         </p>
 
 
